fix(ui): :art: Changing grid-size will not cause overflow any longer

--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .grid-page {
   display: grid;
   grid-gap: 5rem;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  grid-template-rows: 100px 450px 100px;
+  grid-template-rows: 100px 1fr 100px;
   grid-template-areas:
     "h h h h h h h"
-    "m m m m m m m"
+    "s m m m m m m"
     "f f f f f f f";
 }
 
@@ -15,6 +20,15 @@ header {
   margin: 0;
   align-items: center;
   justify-content: center;
+  border: 1px solid black;
+}
+
+section {
+  grid-area: s;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  align-items: center;
 }
 
 main {
@@ -26,10 +40,17 @@ main {
 }
 
 footer {
+  border-top: 1px solid black;
   grid-area: f;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .container > div {
@@ -40,17 +61,14 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-right: 150px;
   box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
-  width: 500px;
-  height: 500px;
+  width: 960px;
+  height: 600px;
 }
 
 .container {
   display: grid;
-}
-
-.btn-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  overflow: hidden;
+  max-height: 100%;
 }
